# ace

./: .gitignore  .gitmodules  CMakeLists.txt  launch_docs.bat
.github/workflows/: run_tests.yml
clang_tools/: .clang-format  .clang-format_v18  .clang-tidy  targets.cmake
clang_tools/v14/: .clang-format  .clang-tidy
clang_tools/v18/: .clang-format  .clang-tidy
demo/: CMakeLists.txt  app.c  app.h  main.c
demo/src/: CMakeLists.txt  app.c  app.h  init.c  init.h  render.c  render.h  time.c  time.h  timer.h  types.h
include/ace/core/: string.h
include/ace/geometry/: intersection.h  off.h  shapes.h
include/ace/math/: mat2.h  mat3.h  mat4.h  math.h  vec2.h  vec2_ext.h  vec3.h  vec3_ext.h  vec4.h  vec4_ext.h
include/ace/physics/: phys_collision.h  phys_components.h  phys_primitives.h  phys_world.h
include/ace/render/: camera.h
include/alibrary/core/: error.h  string.h
include/alibrary/geometry/: off.h
include/alibrary/math/: math.h  vec2.h  vec3.h  vec3_ext.h  vec4.h
include/alibrary/render/: camera.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  config.h  error.c  string.c
src/geometry/: CMakeLists.txt  intersection.c  off.c  off.h
src/math/: CMakeLists.txt  mat2.c  mat3.c  mat4.c  math.c  vec2.c  vec2_ext.c  vec3.c  vec3_ext.c  vec4.c  vec4_ext.c
src/physics/: CMakeLists.txt  phys_collision.c  phys_world.c
src/render/: CMakeLists.txt  camera.c
test/: CMakeLists.txt  math_test.cpp  off.cpp  vec3_ext_test.cpp  vec3_test.cpp
test/geometry/: CMakeLists.txt  off_test.cpp
test/math/: CMakeLists.txt  mat3_test.cpp  vec2_ext_test.cpp  vec2_test.cpp  vec3_ext_test.cpp  vec3_test.cpp  vec4_ext_test.cpp  vec4_test.cpp
